<resources>
    <string name="title_activity_tela_principal">TelaPrincipal</string>

    <string name="app_name">Guia de exercícios para academia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="voltar">Voltar</string>
    <string name="grupo">Grupo</string>
    <string name="nome">Nome</string>
    <string name="title_activity_tela_exercicio">Exercício</string>
    <string name="nada"></string>
    <string name="title_activity_tela_lista_exercicios">Lista de exercicios</string>
    <string name="descr">Descrição: </string>
    <string name="noInfo">Sem informações</string>
    <string name="secundario">Secundário</string>
    <string name="primario">Primário</string>
    <string name="musculosEnvolvidos">Músculos</string>
    <string name="orientacao1">Toque na tela ou selecione na lista o grupo</string>
    <string name="Musculos"><u>Músculos</u></string>
    <string name="title_activity_tela_principal02">TelaPrincipal02</string>
    <string name="exe">Exercícios</string>
    <string name="ficha">Ficha</string>
    <string name="title_activity_tela_principal_ficha">TelaPrincipalFicha</string>
    <string name="add">+</string>
    <string name="listTreino">Lista de treinos</string>
    <string name="novoTreino">Novo treino</string>
    <string name="title_activity_tela_ficha_list_exercicios">TelaFichaListExercicios</string>
    <string name="gMuscular1">Grupo muscular 1</string>
    <string name="nmTreino">Nome do treino</string>
    <string name="click"><u><b>Click</b></u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_image_trans">TransicaoImagemGrupo</string>
    <string name="title_activity_tela_principal_app">TelaPrincipalApp</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_activity_tela_add_repeticao">TelaAddRepeticao</string>
    <string name="title_activity_tela_add_repeticao_exercicio">TelaAddRepeticaoExercicio</string>
    <string name="title_activity_tela_teste_abas">TelaTesteAbas</string>
    <string name ="aba1">Exercício</string>
    <string name ="aba2">Músculo</string>
    <string name ="aba3">Vídeo</string>
    <string name="title_activity_tela_list_exercicio_nova">How to Train</string>
    <string name="nomeApp">How to Train</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tela_side_menu2">TelaSideMenu2</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
    <string name="title_activity_tela_side_menu">TelaSideMenu</string>
    <string name="title_activity_tela_corpo_treino">TelaCorpoTreino</string>
    <string name="title_activity_tela_treino">TelaTreino</string>
    <string name="title_activity_tela_float_action_menu">TelaFloatActionMenu</string>
    <string name="title_activity_tela_fitro_de_treino">TelaFitroDeTreino</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_principal_exercicio">TabPrincipalExercicio</string>
    <string name="title_activity_tab_principal_treino_por_grupo">TabPrincipalTreinoPorGrupo</string>
</resources>
