<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/musculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Musculos"
    />

    <TextView
        android:id="@+id/primario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/musculos"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/musculos"
        android:text="@string/primario"
        android:textStyle="italic"
    />

    <TextView
        android:id="@+id/txtPrimario2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/primario"
        android:layout_alignLeft="@+id/musculos"
        android:text="@string/noInfo" />

    <TextView
        android:id="@+id/secundario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPrimario2"
        android:layout_alignLeft="@+id/musculos"
        android:text="@string/secundario"
        android:textStyle="italic"
        />


    <ScrollView
        android:id="@+id/scrollMusSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secundario"
        android:layout_alignLeft="@+id/musculos"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/txtSecundario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noInfo" />
    </ScrollView>

</RelativeLayout>