<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corActionBarPretoEscuro"
    tools:context=".TelaPrincipalFicha"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/Divisor2"
        android:background="@color/corActionBarPretoEscuro"
        >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/listTreino"
            android:textSize="@dimen/Titulotamanho25"
            android:textColor="@color/corTextoBranco"
        />
    </RelativeLayout>
    <View
        android:id="@+id/Divisor2"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="80dp"
        android:background="#EEEE00" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtNomeTreino"
        android:layout_alignLeft="@+id/textView1"
        android:textColor="@color/corTextoBranco"
        android:text="@string/novoTreino" />

    <Button
        android:id="@+id/btnAddTreino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtNomeTreino"
        android:layout_alignParentRight="true"
        android:background="@color/corDetalhesAmarelos"
        android:textColor="@color/corActionBarPretoEscuro"
        android:text="@string/add"
        android:layout_marginBottom="9dp"
        />

    <EditText
        android:id="@+id/txtNomeTreino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_toLeftOf="@+id/btnAddTreino"
        android:textColor="@color/corTextoBranco"
        android:layout_alignParentBottom="true"/>


    <View
        android:id="@+id/Divisor1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:background="#EEEE00" />

    <ListView
        android:id="@+id/listTreinos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Divisor1"
        android:layout_below="@+id/Divisor2"
        android:layout_marginBottom="5dp" >

    </ListView>

</RelativeLayout>
